# template

./: CITATION  README.md  environment.yml  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
paper/: task_paper.py  template.tex  template_pres.tex
src/template/: __init__.py
src/template/analysis/: task_analysis.py
src/template/data_management/: __init__.py  task_data_management.py
src/template/final/: __init__.py  task_final.py
tests/analysis/: test_model.py  test_predict.py
tests/data_management/: test_clean_data.py
