[metadata]
name = template
description = template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natparit/template
author = Andre
author_email = andre@nowhere.edu
license = Not open source
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Not open source License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Changelog = https://github.com/natparit/template
    Documentation = https://github.com/natparit/template
    Github = https://github.com/natparit/template
    Tracker = https://github.com/natparit/template/issues

[options]
packages = find:
install_requires =
    pytask
python_requires = >=3.11
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/template/_version.py
